@@ -41,8 +41,8 @@
 package com.oracle.truffle.js.test.regress;
 
 import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
 import java.io.File;
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.URI;
 import java.nio.ByteBuffer;
@@ -61,35 +61,65 @@ import java.nio.file.attribute.FileAttribute;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.CompletableFuture;
+import java.util.function.Consumer;
 
 import org.graalvm.polyglot.Context;
+import org.graalvm.polyglot.Value;
 import org.graalvm.polyglot.io.FileSystem;
 import org.junit.Assert;
 import org.junit.Test;
 
-public class GH594 {
+public class GH597 {
 
     @Test
-    public void testGitHub594() throws IOException {
-        Map<Path, String> files = new HashMap<>();
-        files.put(Paths.get("/a/b/cjs-module.cjs").toAbsolutePath(), "exports.fooPromise = import('./esm-module.mjs').then(mod => mod.foo);");
-        files.put(Paths.get("/a/b/esm-module.mjs").toAbsolutePath(), "export const foo = 'foo';");
-        String root = System.getProperty("user.home");
-        ByteArrayOutputStream out = new ByteArrayOutputStream();
-        Context context = Context.newBuilder("js").fileSystem(new TestFileSystem(files, root)).allowAllAccess(true).allowExperimentalOptions(true).out(out).err(out).option("js.commonjs-require",
-                        "true").option("js.commonjs-require-cwd", root).build();
-        context.eval("js", "require('/a/b/cjs-module.cjs').fooPromise.then(console.log);");
-        out.flush();
-        Assert.assertEquals("foo\n", out.toString());
+    public void testCjs() {
+        try (Context context = getTestContext()) {
+            Value v1 = context.eval("js", "require('/no-ext-cjs-module');");
+            Assert.assertEquals(42, v1.getMember("foo").asInt());
+            Value v2 = context.eval("js", "require('/cjs-module.js');");
+            Assert.assertEquals(43, v2.getMember("boo").asInt());
+        }
+    }
+
+    @Test
+    public void testEsm() {
+        try (Context context = getTestContext()) {
+            Value asyncImport = context.eval("js", "import('/no-ext-esm-module')");
+            CompletableFuture<Value> javaPromise = new CompletableFuture<>();
+            asyncImport.invokeMember("then",
+                            (Consumer<Object>) res -> javaPromise.completeExceptionally(new AssertionError()),
+                            (Consumer<Object>) res -> javaPromise.completeExceptionally(new Throwable(res.toString())));
+            Assert.assertTrue(javaPromise.isCompletedExceptionally());
+            try {
+                javaPromise.join();
+                assert false;
+            } catch (Throwable t) {
+                Assert.assertEquals("TypeError: Unsupported file extension: 'file:/no-ext-esm-module'", t.getCause().getMessage());
+            }
+        }
+    }
+
+    private static Context getTestContext() {
+        String fsRoot = System.getProperty("os.name").contains("indows") ? "C:/" : "/";
+        Map<String, String> files = new HashMap<>();
+        files.put("/no-ext-esm-module", "export const foo = 42;");
+        files.put("/no-ext-cjs-module", "module.exports.foo = 42");
+        files.put("/cjs-module.js", "module.exports.boo = 43;");
+        return Context.newBuilder("js").//
+                        fileSystem(new TestFileSystem(files)).//
+                        allowAllAccess(true).//
+                        allowExperimentalOptions(true).//
+                        option("js.commonjs-require", "true").//
+                        option("js.commonjs-require-cwd", fsRoot).//
+                        build();
     }
 
     private static class TestFileSystem implements FileSystem {
 
-        private final String root;
-        private final Map<Path, String> files;
+        private final Map<String, String> files;
 
-        TestFileSystem(Map<Path, String> files, String root) {
-            this.root = root;
+        TestFileSystem(Map<String, String> files) {
             this.files = files;
         }
 
@@ -100,43 +130,46 @@ public class GH594 {
 
         @Override
         public Path toAbsolutePath(Path path) {
-            return Paths.get(root).resolve(path).normalize();
+            return Paths.get("/").resolve(path).normalize();
         }
 
         @Override
-        public Path toRealPath(Path path, LinkOption... linkOptions) {
+        public Path toRealPath(Path path, LinkOption... linkOptions) throws IOException {
             return toAbsolutePath(path);
         }
 
         @Override
         public String getSeparator() {
-            return File.separator;
+            return "/";
         }
 
         @Override
-        public void checkAccess(Path path, Set<? extends AccessMode> modes, LinkOption... linkOptions) {
-            if (path.equals(Paths.get(root))) {
+        public void checkAccess(Path path, Set<? extends AccessMode> modes, LinkOption... linkOptions) throws IOException {
+            if (path.equals(path.getRoot())) {
                 return;
             }
-            if (!files.containsKey(path)) {
-                throw new AssertionError();
+            String filepath = path.toString().replace(File.separator, "/");
+            if (!files.containsKey(filepath)) {
+                throw new FileNotFoundException();
             }
         }
 
         @Override
-        public Map<String, Object> readAttributes(Path path, String attributes, LinkOption... options) {
-            if (!files.containsKey(path)) {
-                throw new AssertionError();
+        public Map<String, Object> readAttributes(Path path, String attributes, LinkOption... options) throws IOException {
+            String filepath = path.toString().replace(File.separator, "/");
+            if (!files.containsKey(filepath)) {
+                throw new FileNotFoundException();
             }
-            Map<String, Object> attrs = new HashMap<>();
-            attrs.put("isRegularFile", Boolean.TRUE);
-            attrs.put("isDirectory", Boolean.FALSE);
-            return attrs;
+            Map<String, Object> attr = new HashMap<>();
+            attr.put("isRegularFile", Boolean.TRUE);
+            attr.put("isDirectory", Boolean.FALSE);
+            return attr;
         }
 
         @Override
-        public SeekableByteChannel newByteChannel(Path path, Set<? extends OpenOption> options, FileAttribute<?>... attrs) {
-            String contents = files.get(path);
+        public SeekableByteChannel newByteChannel(Path path, Set<? extends OpenOption> options, FileAttribute<?>... attrs) throws IOException {
+            String filepath = path.toString().replace(File.separator, "/");
+            String contents = files.get(filepath);
             byte[] bytes = contents.getBytes(StandardCharsets.UTF_8);
             long size = bytes.length;
             ReadableByteChannel channel = Channels.newChannel(new ByteArrayInputStream(bytes));
@@ -154,12 +187,12 @@ public class GH594 {
 
                 @Override
                 public int write(ByteBuffer src) {
-                    throw new AssertionError();
+                    throw new UnsupportedOperationException();
                 }
 
                 @Override
                 public SeekableByteChannel truncate(long sizeParam) {
-                    throw new AssertionError();
+                    throw new UnsupportedOperationException();
                 }
 
                 @Override
@@ -174,34 +207,34 @@ public class GH594 {
 
                 @Override
                 public SeekableByteChannel position(long newPosition) {
-                    throw new AssertionError();
+                    throw new UnsupportedOperationException();
                 }
 
                 @Override
                 public long position() {
-                    throw new AssertionError();
+                    throw new UnsupportedOperationException();
                 }
             };
         }
 
         @Override
         public Path parsePath(URI uri) {
-            return Paths.get(uri);
+            return Path.of(uri);
         }
 
         @Override
-        public void createDirectory(Path dir, FileAttribute<?>... attrs) {
-            throw new AssertionError();
+        public void createDirectory(Path dir, FileAttribute<?>... attrs) throws IOException {
+            throw new UnsupportedOperationException();
         }
 
         @Override
         public void delete(Path path) throws IOException {
-            throw new AssertionError();
+            throw new UnsupportedOperationException();
         }
 
         @Override
-        public DirectoryStream<Path> newDirectoryStream(Path dir, Filter<? super Path> filter) {
-            throw new AssertionError();
+        public DirectoryStream<Path> newDirectoryStream(Path dir, Filter<? super Path> filter) throws IOException {
+            throw new UnsupportedOperationException();
         }
     }
 }
